--- a/photo.html
+++ b/photo.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header class="page-header">
-		<nav class="main-nav main-nav--nojs main-nav--closed">
+	<header class="photo-header">
+		<nav class="main-nav main-nav--closed">
 			<div class="main-nav__wrapper">
 				<div class="main-nav__logo-pad">
 					<div class="main-nav__logo-wrapper">
@@ -115,12 +115,12 @@
 				</div>
 				<ul class="main-nav--list site-list">
 					<li class="site-list__item">
-						<a class="active" href="#">
+						<a href="#">
 							Главная
 						</a>
 					</li>
 					<li class="site-list__item">
-						<a href="#">
+						<a class="active" href="#">
 							Фотографии
 						</a>
 					</li>
@@ -137,320 +137,117 @@
 				</ul>
 			</div>
 		</nav>
-		<section class="intro">
-			<div class="intro__wrapper">
-				<div class="intro__text-wrapper">
-					<h1 class="intro__heading">Взгляните на жизнь иначе!</h1>
-					<a class="round-button round-button--intro intro__position" href="#">Скачать приложение</a>
-					<ul class="intro__list">
-						<li class="intro__item intro__item--apple"><span class="visually-hidden">Apple</span></li>
-						<li class="intro__item intro__item--android"><span class="visually-hidden">Android</span></li>
-						<li class="intro__item intro__item--microsoft"><span class="visually-hidden">Microsoft</span></li>
-					</ul>
-					<p class="intro__availability">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-				</div>
-				<div class="intro__img-wrapper">
-					<div class="intro__hand"></div>
-				</div>
-			</div>
+		<section class="photo-heading">
+			<h2 class="photo-heading__text">
+				Фотографии пользователей
+			</h2>
 		</section>
 	</header>
-	<main class="page-main">
-		<section class="information">
-			<h1 class="information__heading">
-				<p>Устали от серости мегаполиса?</p>
-				<p>Нам есть, что вам предложить!</p>
-			</h1>
-			<div class="information__wrapper">
-				<ul class="information__img-list">
-					<li class="information__img-item"></li>
-					<li class="information__img-item"></li>
-					<li class="information__img-item"></li>
-				</ul>
-				<ul class="information__list">
-					<li class="information__item">
-						<h2 class="information__text-heading">Поднимает настроение</h2>
-						<p class="information__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-					</li>
-					<li class="information__item">
-						<h2 class="information__text-heading">Меняет мир вокруг</h2>
-						<p class="information__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-					</li>
-					<li class="information__item">
-						<h2 class="information__text-heading">Заводит новых друзей</h2>
-						<p class="information__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-					</li>
-				</ul>
-			</div>
-		</section>
-		<section class="reviews">
-			<div class="research">
-				<div class="research__wrapper">
-					<div class="research__img-wrapper">
-						<svg class="research__timer"
-							   xmlns:dc="http://purl.org/dc/elements/1.1/"
-							   xmlns:cc="http://creativecommons.org/ns#"
-							   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-							   xmlns:svg="http://www.w3.org/2000/svg"
-							   xmlns="http://www.w3.org/2000/svg"
-							   viewBox="0 0 397.33334 460.12933"
-							   height="460.12933"
-							   width="397.33334"
-							   xml:space="preserve"
-							   id="svg2"
-							   version="1.1"><metadata
-							     id="metadata8"><rdf:RDF><cc:Work
-							         rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
-							           rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:Work></rdf:RDF></metadata><defs
-							     id="defs6"><clipPath
-							       id="clipPath18"
-							       clipPathUnits="userSpaceOnUse"><path
-							         id="path16"
-							         d="M 0,345.097 H 298 V 0 H 0 Z" /></clipPath></defs><g
-							     transform="matrix(1.3333333,0,0,-1.3333333,0,460.12933)"
-							     id="g10"><g
-							       id="g12"><g
-							         clip-path="url(#clipPath18)"
-							         id="g14"><g
-							           transform="translate(149,38.833)"
-							           id="g20"><path
-							             id="path22"
-							             d="m 0,0 c -60.844,0 -110.167,49.323 -110.167,110.167 0,60.844 49.323,110.167 110.167,110.167 60.843,0 110.167,-49.323 110.167,-110.167 C 110.167,49.323 60.843,0 0,0 m 115.568,204.209 5.355,5.355 c 7.718,7.717 9.124,18.938 3.126,24.935 -5.997,5.997 -17.217,4.59 -24.934,-3.127 l -5.386,-5.385 C 72.768,242.972 47.109,254.389 19,257.967 v 9.583 h 7.658 c 10.914,0 19.843,8.711 19.843,19.357 0,10.646 -8.928,19.357 -19.842,19.357 h -53.317 c -10.913,0 -19.842,-8.711 -19.842,-19.357 0,-10.646 8.929,-19.357 19.842,-19.357 H -19 v -9.583 c -73.319,-9.332 -130,-71.947 -130,-147.8 0,-82.291 66.709,-149 149,-149 82.29,0 149,66.709 149,149 0,35.663 -12.535,68.394 -33.432,94.042" /></g></g></g></g></svg>
-							             <svg class="research__halo"
-										   xmlns:dc="http://purl.org/dc/elements/1.1/"
-										   xmlns:cc="http://creativecommons.org/ns#"
-										   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-										   xmlns:svg="http://www.w3.org/2000/svg"
-										   xmlns="http://www.w3.org/2000/svg"
-										   viewBox="0 0 337.33334 337.33334"
-										   height="337.33334"
-										   width="337.33334"
-										   xml:space="preserve"
-										   id="svg2"
-										   version="1.1"><metadata
-										     id="metadata8"><rdf:RDF><cc:Work
-										         rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
-										           rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:Work></rdf:RDF></metadata><defs
-										     id="defs6"><clipPath
-										       id="clipPath18"
-										       clipPathUnits="userSpaceOnUse"><path
-										         id="path16"
-										         d="M 0,253 H 253 V 0 H 0 Z" /></clipPath></defs><g
-										     transform="matrix(1.3333333,0,0,-1.3333333,0,337.33333)"
-										     id="g10"><g
-										       id="g12"><g
-										         clip-path="url(#clipPath18)"
-										         id="g14"><g
-										           transform="translate(126.5,15.7842)"
-										           id="g20"><path
-										             id="path22"
-										             d="m 0,0 c -60.844,0 -110.167,49.323 -110.167,110.167 0,60.844 49.323,110.167 110.167,110.167 60.843,0 110.167,-49.323 110.167,-110.167 C 110.167,49.323 60.843,0 0,0 m 0,237.216 c -69.864,0 -126.5,-56.636 -126.5,-126.5 0,-69.864 56.636,-126.5 126.5,-126.5 69.864,0 126.5,56.636 126.5,126.5 0,69.864 -56.636,126.5 -126.5,126.5" /></g></g></g></g></svg>
+	<main class="photo-main">
+		<section class="gallery">
+			<h3 class="gallery__heading">
+				Взгляните на фотографии, которые выкладывают пользователи!<br>
+				Видите, как не хватает ваших?
+			</h3>
+			<ul class="gallery__list">
+				<li class="gallery__first-item">
+					<img src="less/gallery/img/photo1.jpg" alt="">
+					<div class="gallery__text-item">
+						<h4 class="gallery__text-heading">Анна <span>(5 минут назад)</span></h4>
+						<p>Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+						<span class="gallery__like">Нравится: 215</span>
 					</div>
-					<div class="research__text">
-						<h2 class="research__heading">
-							Эффект<br> на 24 часа!
-						</h2>
-						<p class="research__paragraph">
-							Британские ученые провели исследования и доказали,<br> что положительный эффект<br> от использования приложения длится целые сутки!
-						</p>
-						<a class="research__link" href="#">
-							Узнать больше об исследовании
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="slider">
-				<div class="slider__desktop-toggles">
-					<button class="slider__back-toggle">
-						<span class="visually-hidden">Назад</span>
-					</button>
-					<button class="slider__next-toggle">
-						<span class="visually-hidden">Вперед</span>
-					</button>
-				</div>
-				<div class="slider__item slider__first-slide">
-					<h3 class="slider__heading">
-						Николай Петров
-						<span class="slider__discription">25 лет, водитель трамвая</span>
-					</h3>
-					<p class="slider__text">
-						«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
-					</p>
-				</div>
-				<div class="slider__item slider__second-slide active">
-					<h3 class="slider__heading">
-						Николай Петров
-						<span class="slider__discription">25 лет, водитель трамвая</span>
-					</h3>
-					<p class="slider__text">
-						«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
-					</p>
-				</div>
-				<div class="slider__item slider__third-slide">
-					<h3 class="slider__heading">
-						Николай Петров
-						<span class="slider__discription">25 лет, водитель трамвая</span>
-					</h3>
-					<p class="slider__text">
-						«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
-					</p>
-				</div>
-				<ul class="slider__toggles toggles">
-					<li class="toggle__item">
-						<button  class="slider__toggle-first toggle__button">
-							<span class="visually-hidden">1 Слайд</span>
-						</button>
+				</li>
+				<div class="gallery__wrapper">
+					<li class="gallery__item">
+						<img src="less/gallery/img/photo2.jpg" alt="">
+						<div class="gallery__text-item">
+							<h4 class="gallery__text-heading">Левон <span>(5 часов назад)</span></h4>
+							<p>Вчера он на луну летал, сегодня в руки к нам попал.</p>
+							<span class="gallery__like">Нравится: 356</span>
+						</div>
 					</li>
-					<li class="toggle__item">
-						<button class="slider__toggle-second toggle__button active">
-							<span class="visually-hidden">2 Слайд</span>
-						</button>
+					<li class="gallery__item">
+						<img src="less/gallery/img/photo3.jpg" alt="">
+						<div class="gallery__text-item">
+							<h4 class="gallery__text-heading">Антон <span>(12 часов назад)</span></h4>
+							<p>Соседи будут рады!</p>
+							<span class="gallery__like">Нравится: 666</span>
+						</div>
 					</li>
-					<li class="toggle__item">
-						<button class="slider__toggle-third toggle__button">
-							<span class="visually-hidden">3 Слайд</span>
-						</button>
+					<li class="gallery__item">
+						<img src="less/gallery/img/photo4.jpg" alt="">
+						<div class="gallery__text-item">
+							<h4 class="gallery__text-heading">Борис <span>(20 часов назад)</span></h4>
+							<p>Здесь могла быть ваша цитата о высоком и вечном.</p>
+							<span class="gallery__like">Нравится: 215</span>
+						</div>
 					</li>
-				</ul>
-			</div>
+					<li class="gallery__item">
+						<img src="less/gallery/img/photo5.jpg" alt="">
+						<div class="gallery__text-item">
+							<h4 class="gallery__text-heading">Сергей <span>(25 часов назад)</span></h4>
+							<p>Самая кубанская в мире!</p>
+							<span class="gallery__like">Нравится: 4</span>
+						</div>
+					</li>
+					<li class="gallery__item">
+						<img src="less/gallery/img/photo6.jpg" alt="">
+						<div class="gallery__text-item">
+							<h4 class="gallery__text-heading">Максим <span>(40 часов назад)</span></h4>
+							<p>Где снег-то?</p>
+							<span class="gallery__like">Нравится: 150</span>
+						</div>
+					</li>
+					<li class="gallery__item">
+						<img src="less/gallery/img/photo7.jpg" alt="">
+						<div class="gallery__text-item">
+							<h4 class="gallery__text-heading">Надежда <span>(45 часов назад)</span></h4>
+							<p>Всем GM и взаимные лайки!</p>
+							<span class="gallery__like">Нравится: 2560</span>
+						</div>
+					</li>
+				</div>
+			</ul>
 		</section>
-		<section class="price">
-			<div class="price__wrapper">
-				<table class="price__table">
-					<thead class="price__header">
-						<tr>
-							<td></td>
-							<td>
-								<h3 class="price__name">
-									База
-								</h3>
-								<p class="price__value">
-									1,99 USD
-								</p>
-							</td>
-							<td class="price__hit">
-								<h3 class="price__name">
-									Стандарт
-								</h3>
-								<p class="price__value">
-									3,99 USD
-								</p>
-							</td>
-							<td>
-								<h3 class="price__name">
-									Анлим
-								</h3>
-								<p class="price__value">
-									9,99 USD
-								</p>
-							</td>
-						</tr>
-					</thead>
-					<tbody class="price__body">
-						<tr>
-							<td>
-								Розовый фильтр
-							</td>
-							<td>
-								<span class="price__hidden">Розовый фильтр</span>
-								<span class="price__icon price__icon--check"></span>
-							</td>
-							<td>
-								<span class="price__hidden">Розовый фильтр</span>
-								<span class="price__icon price__icon--check"></span>
-							</td>
-							<td>
-								<span class="price__hidden">Розовый фильтр</span>
-								<span class="price__icon price__icon--check"></span>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								Смайлики
-							</td>
-							<td>
-								<span class="price__hidden">Смайлики</span>
-								<span class="price__icon price__icon--cross"></span>
-							</td>
-							<td>
-								<span class="price__hidden">Смайлики</span>
-								<span class="price__icon price__icon--check"></span>
-							</td>
-							<td>
-								<span class="price__hidden">Смайлики</span>
-								<span class="price__icon price__icon--check"></span>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								Комментарии
-							</td>
-							<td>
-								<span class="price__hidden">Комментарии</span>
-								<span class="price__icon price__icon--cross"></span>
-							</td>
-							<td>
-								<span class="price__hidden">Комментарии</span>
-								<span class="price__icon price__icon--cross"></span>
-							</td>
-							<td>
-								<span class="price__hidden">Комментарии</span>
-								<span class="price__icon price__icon--check"></span>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				<ul class="price__toggles toggles">
-					<li class="toggle__item">
-						<button  class="price__toggle-first toggle__button">
-							<span class="visually-hidden">1 Слайд</span>
-						</button>
-					</li>
-					<li class="toggle__item">
-						<button class="price__toggle-second toggle__button active">
-							<span class="visually-hidden">2 Слайд</span>
-						</button>
-					</li>
-					<li class="toggle__item">
-						<button class="price__toggle-third toggle__button">
-							<span class="visually-hidden">3 Слайд</span>
-						</button>
-					</li>
-				</ul>
+		<section class="upload">
+			<h4 class="upload__header">
+				Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!
+			</h4>
+			<div class="upload__filter">
+				<div class="upload__img-wrapper">
+					<img src="less/upload/img/filter-img.jpg" alt="">
+				</div>
+				<div class="upload__filters-wrapper">
+					<form action="">
+						<div class="upload__scale-wrapper">
+							<span class="upload__icon active"><svg xmlns="http://www.w3.org/2000/svg" height="50" width="50"><g clip-path="url(#a)" transform="matrix(1.0 0 0 -1.0 0 50)"><path d="M14 14v32h-4v-8H2v-4h8V14c0-2.21 1.79-4 4-4h20V2h4v8h8v4zm20 4h4v16c0 2.21-1.79 4-4 4H18v-4h16z"/></g></svg></span>
+							<div class="upload__scale active">
+								<span class="upload__toggle"></span>
+							</div>
+						</div>
+						<div class="upload__scale-wrapper">
+							<span class="upload__icon"><svg xmlns="http://www.w3.org/2000/svg" height="50" width="50"><defs><clipPath id="a" clipPathUnits="userSpaceOnUse"><path d="M0 48h48V0H0z"/></clipPath></defs><g clip-path="url(#a)" transform="matrix(1.0 0 0 -1.0 0 50)"><path d="M38 25s-4-4.33-4-7c0-2.21 1.79-4 4-4s4 1.79 4 4c0 2.67-4 7-4 7m-27.59 3L20 37.58 29.59 28zm22.71 2.12L15.24 48l-2.83-2.83 4.76-4.76L6.88 30.12a3 3 0 010-4.24l11-11c.58-.59 1.35-.88 2.12-.88s1.54.29 2.12.88l11 11a3 3 0 010 4.24M48 5H0v3h48z"/></g></svg></span>
+							<div class="upload__scale">
+								<span class="upload__toggle"></span>
+							</div>
+						</div>
+						<div class="upload__scale-wrapper">
+							<span class="upload__icon"><svg xmlns="http://www.w3.org/2000/svg" height="50" width="50"><defs><clipPath id="a" clipPathUnits="userSpaceOnUse"><path d="M0 31.92h31.92V0H0z"/></clipPath></defs><g clip-path="url(#a)" transform="matrix(1.0 0 0 -1.0 0 50)"><path d="M15.96 31.92C7.146 31.92 0 24.775 0 15.96 0 7.147 7.146 0 15.96 0s15.96 7.147 15.96 15.96c0 8.815-7.146 15.96-15.96 15.96m0-4c6.595 0 11.96-5.365 11.96-11.96C27.92 9.365 22.555 4 15.96 4 9.365 4 4 9.365 4 15.96c0 6.595 5.365 11.96 11.96 11.96" /><path d="M15.96 7.629a8.519 8.519 0 018.52 8.52 8.518 8.518 0 01-8.52 8.518"/></g></svg></span>
+							<div class="upload__scale">
+								<span class="upload__toggle"></span>
+							</div>
+						</div>
+						<div class="upload__button-wrapper">
+							<button class="round-button round-button--red">Запостить</button>
+							<button class="round-button round-button--gray">Отмена</button>
+						</div>
+					</form>
+				</div>
 			</div>
-			<div></div>
 		</section>
 	</main>
 	<footer>
-		<section class="contacts">
-			<h2 class="contacts__header">
-				Остались вопросы? Свяжитесь с нами!
-			</h2>
-			<div class="contacts__wrapper">
-				<p class="contacts__item">
-					Звоните:
-					<a class="contacts__link" href="">
-						+7 (812) 555-66-66
-					</a>
-				</p>
-				<p class="contacts__item">
-					Пишите:
-					<a class="contacts__link" href="">
-						mail@htmlacademy.ru
-					</a>
-				</p>
-				<p class="contacts__item">
-					Приезжайте в гости:
-					<a class="contacts__link" href="">
-						ул. Большая<br> конюшенная, 19/8
-					</a>
-				</p>
-			</div>
-		</section>
-		<section class="map">
-			<img src="less/map/img/arrow.svg" alt="">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2826.4622759108984!2d30.322265202054233!3d59.93860274451381!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1576840671308!5m2!1sru!2sru" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-		</section>
 		<section class="social">
 			<div class="social__wrapper">
 				<div class="social__logo">
